--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ jobs:
       script:
         - ls -la ./build/dist/
         - cat ./build/dist/index.html
+        - export RECAPTCHA_SITE_KEY=$TEST_RECAPTCHA_SITE_KEY
         - export AWS_ACCESS_KEY_ID=$TEST_AWS_ACCESS_KEY_ID
         - export AWS_SECRET_ACCESS_KEY=$TEST_AWS_SECRET_ACCESS_KEY
         - aws s3 rm s3://wallet.testnet.crypto-bridge.org/index.html
@@ -52,6 +53,7 @@ jobs:
       script:
         - ls -la ./build/dist/
         - cat ./build/dist/index.html
+        - export RECAPTCHA_SITE_KEY=$STAGE_RECAPTCHA_SITE_KEY
         - export AWS_ACCESS_KEY_ID=$STAGE_AWS_ACCESS_KEY_ID
         - export AWS_SECRET_ACCESS_KEY=$STAGE_AWS_SECRET_ACCESS_KEY
         - aws s3 rm s3://wallet.stage.crypto-bridge.org/index.html
@@ -65,6 +67,7 @@ jobs:
       script:
         - ls -la ./build/dist/
         - cat ./build/dist/index.html
+        - export RECAPTCHA_SITE_KEY=$PROD_RECAPTCHA_SITE_KEY
         - export AWS_ACCESS_KEY_ID=$PROD_AWS_ACCESS_KEY_ID
         - export AWS_SECRET_ACCESS_KEY=$PROD_AWS_SECRET_ACCESS_KEY
         - aws s3 rm s3://wallet.crypto-bridge.org/index.html
