--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
         "file-saver": "^1.3.8",
         "foundation-apps": "git+https://github.com/zurb/foundation-apps.git",
         "fractional": "^1.0.0",
+        "hirestime": "^3.2.1",
         "ifvisible": "^1.1.0",
         "immutable": "3.8.2",
         "indexeddbshim": "^2.2.1",
