--- a/package.json
+++ b/package.json
@@ -212,6 +212,7 @@
         "copyfiles": "^1.2.0",
         "cross-env": "^5.0.5",
         "css-loader": "^0.28.11",
+        "dotenv": "^6.0.0",
         "electron": "^2.0.0",
         "electron-builder": "^20.13.2",
         "es6-promise": "^3.0.2",
