[FEATURE] CB-1502 removed unneeded coins & trading calls

--- a/.env-default
+++ b/.env-default
@@ -1,4 +1,1 @@
-SUPPORT_URL=http://localhost:3000
-SUPPORT_PUBLIC_KEY=BTS4wDJjaKzywGU9RaQpx1JvjFnnWd4pibP9hxYdphXHUdt2wvqAS
-API_COINS_URL=https://api.testnet.crypto-bridge.org/v1/coins
-API_TRADING_PAIRS_URL=https://api.testnet.crypto-bridge.org/v1/trading-pairs
+API_SUPPORT_BASE=https://api.testnet.crypto-bridge.org/v1/support
