[FIX] CB-1636 removed dotenv

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "profile-nougly": "cross-env NODE_ENV=production webpack --env.prod --env.profile --env.hash --env.noUgly --profile --json > stats-prod-nougly.json",
         "start": "cross-env NODE_ENV=development node server.js",
         "prestart-electron": "cross-env NODE_ENV=production webpack --env.hash --env.noUgly --env.electron --env.prod && npm run prepare-electron",
-        "start-dev": "cross-env NODE_ENV=development __DEVNET__=true __WALLET_URL__=http://localhost:8080 __API_URL__=http://localhost:5000 node server.js",
+        "start-dev": "cross-env NODE_ENV=development __DEVNET__=true __WALLET_URL__=http://localhost:8080 __API_URL__=http://localhost:5000 __API_SUPPORT_URL__=http://localhost:3000 node server.js",
         "start-electron": "electron build/electron/index.js",
         "fix-locale-files": "node ./app/assets/locales-fixup.js",
         "postfix-locale-files": "./node_modules/prettier/bin-prettier.js app/assets/locales/locale-*.json --write",
@@ -39,8 +39,8 @@
         "build-github": "cross-env NODE_ENV=production webpack --env.prod --env.hash --env.deprecated --env.baseUrl='/wallet/'",
         "build-electron": "cross-env NODE_ENV=production webpack --env.prod --env.electron --env.hash",
         "build-electron-nougly": "cross-env NODE_ENV=production webpack --env.prod --env.electron --env.noUgly --env.hash --progress --display-error-details --colors",
-        "build-testnet": "cross-env NODE_ENV=production __TESTNET__=true __WALLET_URL__=https://wallet.testnet.crypto-bridge.org __API_URL__=https://api.testnet.crypto-bridge.org webpack --env.prod",
-        "build-stage": "cross-env NODE_ENV=production __STAGENET__=true __WALLET_URL__=https://wallet.stage.crypto-bridge.org __API_URL__=https://api.stage.crypto-bridge.org webpack --env.prod",
+        "build-testnet": "cross-env NODE_ENV=production __TESTNET__=true __WALLET_URL__=https://wallet.testnet.crypto-bridge.org __API_URL__=https://api.testnet.crypto-bridge.org __API_SUPPORT_URL__=https://wallet.testnet.crypto-bridge.org/v1/support webpack --env.prod",
+        "build-stage": "cross-env NODE_ENV=production __STAGENET__=true __WALLET_URL__=https://wallet.stage.crypto-bridge.org __API_URL__=https://api.stage.crypto-bridge.org __API_SUPPORT_URL__=https://wallet.stage.crypto-bridge.org/v1/support webpack --env.prod",
         "prepare-electron": "copyfiles -f resources/*.js build/electron/",
         "postbuild-electron": "npm run prepare-electron",
         "postbuild-electron-nougly": "npm run prepare-electron",
@@ -212,7 +212,6 @@
         "copyfiles": "^1.2.0",
         "cross-env": "^5.0.5",
         "css-loader": "^0.28.11",
-        "dotenv": "^6.0.0",
         "electron": "^2.0.0",
         "electron-builder": "^20.13.2",
         "es6-promise": "^3.0.2",
