--- a/package.json
+++ b/package.json
@@ -202,6 +202,7 @@
         "zxcvbn-async": "0.0.5"
     },
     "devDependencies": {
+        "autoprefixer": "^9.5.1",
         "babel-core": "^6.26.3",
         "babel-eslint": "^8.2.5",
         "babel-jest": "^24.1.0",
@@ -220,7 +221,7 @@
         "copy-webpack-plugin": "^4.5.1",
         "copyfiles": "^1.2.0",
         "cross-env": "^5.0.5",
-        "css-loader": "^0.28.11",
+        "css-loader": "^2.1.1",
         "electron": "^2.0.13",
         "electron-builder": "^20.31.2",
         "es6-promise": "^3.0.2",
@@ -245,7 +246,7 @@
         "node-libs-browser": "^1.0.0",
         "node-sass": "^4.11.0",
         "null-loader": "^0.1.1",
-        "postcss-loader": "^2.1.5",
+        "postcss-loader": "^3.0.0",
         "prettier": "^1.10.2",
         "pretty-quick": "^1.4.1",
         "react-hot-loader": "^4.3.3",
