--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "BitShares2-light",
-    "version": "2.0.190410-rc2",
+    "version": "2.0.190522-rc1",
     "description": "Advanced wallet interface for the BitShares financial blockchain.",
     "homepage": "https://github.com/bitshares/bitshares-ui",
     "author": "Sigve Kvalsvik <kvalsvik.crypto@gmail.com>",
@@ -141,7 +141,7 @@
         "bignumber.js": "^4.0.0",
         "bitshares-report": "^0.2.0",
         "bitshares-ui-style-guide": "git+https://github.com/bitshares/bitshares-ui-style-guide.git#f08cc818f5d5548113f3d138caedac6c287e903f",
-        "bitsharesjs": "^1.8.3",
+        "bitsharesjs": "^3.0.0-rc1",
         "browser-locale": "^1.0.3",
         "classnames": "^2.2.1",
         "cookies-js": "^1.2.1",
@@ -224,7 +224,7 @@
         "cross-env": "^5.0.5",
         "css-loader": "^2.1.1",
         "electron": "^2.0.13",
-        "electron-builder": "^20.39.0",
+        "electron-builder": "^20.40.2",
         "es6-promise": "^3.0.2",
         "eslint": "^4.19.0",
         "eslint-plugin-json": "^1.2.0",
@@ -239,13 +239,13 @@
         "html-webpack-plugin": "^3.2.0",
         "html2canvas": "^1.0.0-alpha.12",
         "husky": "^0.14.3",
-        "jest-cli": "^24.1.0",
+        "jest-cli": "^24.7.1",
         "less-plugin-precompile-import": "git+https://github.com/gibbsfromncis/less-plugin-precompile-import.git#166550452515c03c0d497cae97bf58ba15ca1f84",
         "markdown-loader": "^2.0.2",
         "mini-css-extract-plugin": "^0.4.0",
         "mocha": "^5.1.1",
         "node-libs-browser": "^1.0.0",
-        "node-sass": "^4.11.0",
+        "node-sass": "^4.12.0",
         "null-loader": "^0.1.1",
         "postcss-loader": "^3.0.0",
         "prettier": "^1.10.2",
