sync lock and locales
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "BitShares2-light",
-    "version": "3.1.190522-rc1",
+    "version": "3.1.190529-rc1",
     "description": "Advanced wallet interface for the BitShares financial blockchain.",
     "homepage": "https://github.com/bitshares/bitshares-ui",
-    "author": "Sigve Kvalsvik <kvalsvik.crypto@gmail.com>",
+    "author": "BitShares UI Worker <ui-dev@bitshares.org>",
     "contributors": [
-        "BitShares UI Worker",
+        "Sigve Kvalsvik <kvalsvik.crypto@gmail.com>",
         "James Calfee",
         "Dan Larimer",
         "Valentine Zavgorodnev <valentine.zavgorodnev@gmail.com>"
