--- a/package.json
+++ b/package.json
@@ -168,6 +168,7 @@
         "notifyjs": "^3.0.0",
         "numeral": "2.0.4",
         "object-assign": "^4.0.1",
+        "oidc-client": "^1.8.2",
         "perfect-scrollbar": "git+https://github.com/bitshares/perfect-scrollbar.git",
         "prop-types": "^15.6.1",
         "qrcode": "^1.3.0",
