updated from bts pull

--- a/package.json
+++ b/package.json
@@ -140,7 +140,7 @@
         "alt-react": "git+https://github.com/bitshares/alt-react.git#d91addef51f58e41e9857ebb0dd9177cfbd3b583",
         "bignumber.js": "^4.0.0",
         "bitshares-report": "^0.2.0",
-        "bitshares-ui-style-guide": "git+https://github.com/bitshares/bitshares-ui-style-guide.git#83b82d056ca134b08521e8eca541438b7b4783f6",
+        "bitshares-ui-style-guide": "https://github.com/bitshares/bitshares-ui-style-guide.git#83b82d056ca134b08521e8eca541438b7b4783f6",
         "bitsharesjs": "^3.1.0",
         "browser-locale": "^1.0.3",
         "classnames": "^2.2.1",
@@ -149,7 +149,7 @@
         "counterpart": "^0.18.5",
         "event-emitter": "^0.3.4",
         "file-saver": "^1.3.8",
-        "foundation-apps": "git+https://github.com/zurb/foundation-apps.git",
+        "foundation-apps": "https://github.com/zurb/foundation-apps.git",
         "fractional": "^1.0.0",
         "hirestime": "^3.2.1",
         "ifvisible": "^1.1.0",
@@ -157,7 +157,7 @@
         "indexeddbshim": "^2.2.1",
         "intl": "^1.2.5",
         "intro.js": "^2.8.0-alpha.1",
-        "jdenticon": "git+https://github.com/cryptonomex/jdenticon.git",
+        "jdenticon": "https://github.com/cryptonomex/jdenticon.git",
         "js-sha256": "^0.2.3",
         "jspdf": "^1.4.1",
         "lodash-es": "^4.17.10",
