updated by vs bot

--- a/app/.htaccess.example
+++ b/app/.htaccess.example
@@ -1,4 +1,4 @@
-RewriteBase /
+RewriteBase 
 RewriteRule ^index\.html$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
