allow multiple headline feeds and prepare for blacklists
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "prestart-electron": "cross-env NODE_ENV=production webpack --env.hash --env.noUgly --env.electron --env.prod && npm run prepare-electron",
         "start-electron": "electron build/electron/index.js",
         "fix-locale-files": "node ./app/assets/locales-fixup.js",
+        "create-notification-string": "node ./app/assets/create-notifcation-string.js",
         "remove-english-locale-duplicates": "node ./app/assets/locales-remove-english-duplicates.js",
         "postfix-locale-files": "./node_modules/prettier/bin-prettier.js app/assets/locales/locale-*.json --write",
         "build": "cross-env NODE_ENV=production webpack --env.prod",
