--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     },
     "main": "build/electron/index.js",
     "scripts": {
+        "postinstall": "npm run install-charting-library",
         "compile-tv-css": "node-sass ./charting_library/static/scss/ --output ./charting_library/static/ --output-style compressed",
+        "install-charting-library": "node ./charting_library/install-charting-library.js",
         "test:market": "cross-env NODE_ENV=test mocha --require babel-core/register --watch --watch-extensions js ./app/test/marketTests",
         "bench:market": "cross-env NODE_ENV=test babel ./lib/common/MarketClasses.js -o ./app/test/MarketClasses.js && cross-env NODE_ENV=test node --harmony ./test/marketBenchmark",
         "profile-dev": "webpack --env.dev --env.profile --profile --json > stats-dev.json",
@@ -50,6 +52,7 @@
         "prepackage": "npm run build-electron",
         "prepackage-no-ugly": "npm run build-electron-nougly",
         "package": "build -p never",
+        "package-charting-library": "node ./charting_library/package-charting-library.js",
         "package-no-ugly": "build -p never",
         "package-deb": "npm run prepackage && build  -p never --linux deb",
         "package-snap": "npm run prepackage && build  -p never --linux snap",
@@ -203,6 +206,7 @@
         "zxcvbn-async": "0.0.5"
     },
     "devDependencies": {
+        "archiver": "^3.0.0",
         "autoprefixer": "^9.5.1",
         "babel-core": "^6.26.3",
         "babel-eslint": "^8.2.5",
@@ -231,6 +235,7 @@
         "eslint-plugin-react": "^5.2.2",
         "express": "^4.14.0",
         "express-history-api-fallback": "^2.1.0",
+        "extract-zip": "^1.6.7",
         "file-loader": "^1.1.11",
         "fs-jetpack": "^1.3.0",
         "git-rev-sync": "^1.12.0",
@@ -238,10 +243,12 @@
         "html-loader": "^0.5.5",
         "html-webpack-plugin": "^3.2.0",
         "html2canvas": "^1.0.0-alpha.12",
+        "https": "^1.0.0",
         "husky": "^0.14.3",
         "jest-cli": "^24.7.1",
         "less-plugin-precompile-import": "git+https://github.com/gibbsfromncis/less-plugin-precompile-import.git#166550452515c03c0d497cae97bf58ba15ca1f84",
         "markdown-loader": "^5.0.0",
+        "md5-file": "^4.0.0",
         "mini-css-extract-plugin": "^0.4.0",
         "mocha": "^5.1.1",
         "node-libs-browser": "^1.0.0",
