--- a/package.json
+++ b/package.json
@@ -137,9 +137,7 @@
         "alt-container": "git+https://github.com/bitshares/alt-container.git#cf4e2c690a54e49fc9fe2dc99ab8816e6c3e5a86",
         "alt-react": "git+https://github.com/bitshares/alt-react.git#d91addef51f58e41e9857ebb0dd9177cfbd3b583",
         "bignumber.js": "^4.0.0",
-        "tusc-report": "^0.0.8",
         "bitshares-ui-style-guide": "git+https://github.com/bitshares/bitshares-ui-style-guide.git#83b82d056ca134b08521e8eca541438b7b4783f6",
-        "tuscjs": "^0.0.8",
         "browser-locale": "^1.0.3",
         "classnames": "^2.2.1",
         "cookies-js": "^1.2.1",
@@ -150,6 +148,7 @@
         "foundation-apps": "git+https://github.com/zurb/foundation-apps.git",
         "fractional": "^1.0.0",
         "hirestime": "^3.2.1",
+        "history": "^4.10.1",
         "ifvisible": "^1.1.0",
         "immutable": "3.8.2",
         "indexeddbshim": "^2.2.1",
@@ -179,6 +178,8 @@
         "react-debounce-render": "^4.0.2",
         "react-dom": "^16.4.1",
         "react-foundation-apps": "git+https://github.com/bitshares/react-foundation-apps.git",
+        "react-ga": "^2.7.0",
+        "react-google-recaptcha": "^2.0.1",
         "react-highcharts": "^16.0",
         "react-interpolate-component": "^0.12.0",
         "react-intl": "^2.4.0",
@@ -196,10 +197,11 @@
         "steem-js-api": "^0.7.1",
         "string-similarity": "^2.0.0",
         "tcomb": "2.5.2",
+        "tusc-report": "^0.0.8",
+        "tuscjs": "^0.0.8",
         "whatwg-fetch": "^2.0.1",
         "xss": "^1.0.3",
-        "zxcvbn-async": "0.0.5",
-        "react-google-recaptcha": "^2.0.1"
+        "zxcvbn-async": "0.0.5"
     },
     "devDependencies": {
         "autoprefixer": "^9.5.1",
