update bitshares-report dependencies
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/package.json
+++ b/package.json
@@ -143,8 +143,8 @@
         "alt-container": "git+https://github.com/bitshares/alt-container.git#cf4e2c690a54e49fc9fe2dc99ab8816e6c3e5a86",
         "alt-react": "git+https://github.com/bitshares/alt-react.git#d91addef51f58e41e9857ebb0dd9177cfbd3b583",
         "bignumber.js": "^4.0.0",
-        "bitshares-report": "^0.2.0",
-        "bitshares-ui-style-guide": "git+https://github.com/bitshares/bitshares-ui-style-guide.git#83b82d056ca134b08521e8eca541438b7b4783f6",
+        "bitshares-report": "git+https://github.com/bitshares/bitshares-report.git#bba397fc7b4eb903d1ca109ac33301e9d2e2d753",
+        "bitshares-ui-style-guide": "git+https://github.com/bitshares/bitshares-ui-style-guide.git#23ca108d47442dc70634797fb113d1e751e9b1cb",
         "bitsharesjs": "^3.3.0-rc1",
         "browser-locale": "^1.0.3",
         "classnames": "^2.2.1",
@@ -177,7 +177,7 @@
         "oidc-client": "^1.8.2",
         "perfect-scrollbar": "git+https://github.com/bitshares/perfect-scrollbar.git",
         "prop-types": "^15.6.1",
-        "qrcode": "^1.3.0",
+        "qrcode": "^1.4.4",
         "qrcode.react": "^0.7.1",
         "query-string": "^6.1.0",
         "react": "^16.4.1",
