--- a/package.json
+++ b/package.json
@@ -179,7 +179,7 @@
         "react-dom": "^16.4.1",
         "react-foundation-apps": "git+https://github.com/bitshares/react-foundation-apps.git",
         "react-ga": "^2.7.0",
-        "react-google-recaptcha": "^2.0.1",
+        "react-google-recaptcha-v3": "^1.5.0",
         "react-highcharts": "^16.0",
         "react-interpolate-component": "^0.12.0",
         "react-intl": "^2.4.0",
