--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
         "bignumber.js": "^4.0.0",
         "bitshares-ui-style-guide": "git+https://github.com/bitshares/bitshares-ui-style-guide.git#83b82d056ca134b08521e8eca541438b7b4783f6",
         "browser-locale": "^1.0.3",
+        "chokidar": "^3.4.2",
         "classnames": "^2.2.1",
         "cookies-js": "^1.2.1",
         "copy-webpack-plugin": "^4.5.1",
@@ -147,7 +148,8 @@
         "file-saver": "^1.3.8",
         "foundation-apps": "git+https://github.com/zurb/foundation-apps.git",
         "fractional": "^1.0.0",
-        "hirestime": "^3.2.1",
+        "handlebars": "^4.7.6",
+        "hirestime": "^3.2.2",
         "history": "^4.10.1",
         "ifvisible": "^1.1.0",
         "immutable": "3.8.2",
@@ -159,27 +161,27 @@
         "jspdf": "^1.4.1",
         "lodash-es": "^4.17.10",
         "lzma": "2.1.6",
-        "moment": "^2.22.2",
-        "moment-timezone": "^0.5.16",
+        "moment": "^2.27.0",
+        "moment-timezone": "^0.5.31",
         "node-rsa": "^0.4.2",
         "notifyjs": "^3.0.0",
         "numeral": "2.0.4",
         "object-assign": "^4.0.1",
         "perfect-scrollbar": "git+https://github.com/bitshares/perfect-scrollbar.git",
         "prop-types": "^15.6.1",
-        "qrcode": "^1.3.0",
+        "qrcode": "^1.4.4",
         "qrcode.react": "^0.7.1",
-        "query-string": "^6.1.0",
-        "react": "^16.4.1",
+        "query-string": "^6.13.1",
+        "react": "^16.13.1",
         "react-autocomplete": "^1.7.2",
         "react-clipboard.js": "^1.0.1",
-        "react-copy-to-clipboard": "^5.0.1",
+        "react-copy-to-clipboard": "^5.0.2",
         "react-datepicker2": "git+https://github.com/bitshares/react-datepicker2.git#9d4c2c28a23c970badcf765c35c5493d5a49afde",
         "react-debounce-render": "^4.0.2",
-        "react-dom": "^16.4.1",
+        "react-dom": "^16.13.1",
         "react-foundation-apps": "git+https://github.com/bitshares/react-foundation-apps.git",
         "react-ga": "^2.7.0",
-        "react-google-recaptcha-v3": "^1.5.0",
+        "react-google-recaptcha-v3": "^1.5.2",
         "react-highcharts": "^16.0",
         "react-interpolate-component": "^0.12.0",
         "react-intl": "^2.4.0",
@@ -190,8 +192,8 @@
         "react-qr-reader": "^2.1.0",
         "react-responsive-mixin": "^0.4.0",
         "react-router-dom": "^4.3.1",
-        "react-scroll": "^1.7.9",
-        "react-tooltip": "^3.6.1",
+        "react-scroll": "^1.8.1",
+        "react-tooltip": "^3.11.6",
         "react-transition-group": "^1.2.0",
         "react-translate-component": "^0.15.1",
         "steem-js-api": "^0.7.1",
@@ -200,11 +202,11 @@
         "tusc-report": "^0.0.9",
         "tuscjs": "^0.0.11",
         "whatwg-fetch": "^2.0.1",
-        "xss": "^1.0.3",
+        "xss": "^1.0.8",
         "zxcvbn-async": "0.0.5"
     },
     "devDependencies": {
-        "autoprefixer": "^9.5.1",
+        "autoprefixer": "^9.8.6",
         "babel-core": "^6.26.3",
         "babel-eslint": "^8.2.5",
         "babel-jest": "^24.1.0",
@@ -238,7 +240,7 @@
         "handlebars-loader": "^1.7.0",
         "html-loader": "^0.5.5",
         "html-webpack-plugin": "^3.2.0",
-        "html2canvas": "^1.0.0-alpha.12",
+        "html2canvas": "^1.0.0-rc.7",
         "husky": "^0.14.3",
         "jest-cli": "^24.7.1",
         "less-plugin-precompile-import": "git+https://github.com/gibbsfromncis/less-plugin-precompile-import.git#166550452515c03c0d497cae97bf58ba15ca1f84",
@@ -246,26 +248,26 @@
         "mini-css-extract-plugin": "^0.4.0",
         "mocha": "^5.1.1",
         "node-libs-browser": "^1.0.0",
-        "node-sass": "^4.12.0",
+        "node-sass": "^4.14.1",
         "null-loader": "^0.1.1",
         "postcss-loader": "^3.0.0",
-        "prettier": "^1.10.2",
+        "prettier": "^1.19.1",
         "pretty-quick": "^1.4.1",
-        "react-hot-loader": "^4.3.3",
+        "react-hot-loader": "^4.12.21",
         "react-perf-devtool": "^3.0.7",
         "react-sticky-table": "1.2.0",
         "sass-loader": "^7.0.1",
         "script-loader": "^0.6.1",
         "style-loader": "^0.20.3",
-        "svg-inline-loader": "^0.8.0",
+        "svg-inline-loader": "^0.8.2",
         "svg-loader": "0.0.2",
-        "svgo": "^1.2.0",
+        "svgo": "^1.3.2",
         "svgo-loader": "^2.1.0",
         "uglifyjs-webpack-plugin": "^1.2.7",
         "url-loader": "^1.0.1",
-        "webpack": "^4.16.5",
-        "webpack-cli": "^3.2.3",
-        "webpack-dev-middleware": "^3.1.3",
+        "webpack": "^4.44.1",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-middleware": "^3.7.2",
         "webpack-hot-middleware": "^2.22.1",
         "worker-loader": "^1.1.1"
     }
