--- a/package.json
+++ b/package.json
@@ -182,6 +182,7 @@
         "react-foundation-apps": "git+https://github.com/bitshares/react-foundation-apps.git",
         "react-ga": "^2.7.0",
         "react-google-recaptcha-v3": "^1.5.2",
+        "react-helmet": "^6.1.0",
         "react-highcharts": "^16.0",
         "react-interpolate-component": "^0.12.0",
         "react-intl": "^2.4.0",
