added new dockerfile conf

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,6 +1,6 @@
-
+daemon off;
 worker_processes  4;
-
+error_log stderr notice;
 events {
     worker_connections  1024;
 }
@@ -8,7 +8,7 @@ events {
 http {
     include       mime.types;
     default_type  application/octet-stream;
-
+    access_log /dev/stdout;
     sendfile        on;
 
     keepalive_timeout  165;
@@ -35,10 +35,7 @@ http {
     server {
         listen 80;
         server_name  _;
-        root /var/www/;
-
-        ssl off;
-        # @TODO configure ssl
+        root /app/;
 
         location ~ ^/(img|images|photo|photos|page|pages|uploads|countries|make|pic|foto|list|pictures|news|feed|rotated|carimg|category|reviews) {
             access_log off;
