--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,9 @@
 version: "2"
-volumes:
- wallet_build: {}
 
 services:
- web-wallet:
-  build: .
-  ports:
-   - "8080:80"
-  volumes:
-   - wallet_build:/bitshares-ui/build/dist
-   - .:/bitshares-ui
+    web:
+        build: .
+        volumes:
+            - ./conf/nginx.conf:/etc/nginx/nginx.conf:rw
+        ports:
+            - 4000:80
