--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "BitShares2-light",
-    "version": "5.0.20210216-rc1",
+    "version": "5.0.210216-rc1",
     "description": "Reference UI to showcase all features of the BitShares blockchain.",
     "homepage": "https://github.com/bitshares/bitshares-ui",
     "author": "BitShares UI Worker <ui-dev@bitshares.org>",
