Fix deploy path

--- a/.github/workflows/npm-build-and-deploy-staging.yml
+++ b/.github/workflows/npm-build-and-deploy-staging.yml
@@ -24,12 +24,12 @@ jobs:
             - name: Create CNAME file
               uses: finnp/create-file-action@master
               env:
-                  FILE_NAME: build/dist/CNAME
+                  FILE_NAME: build/hash-history/CNAME
                   FILE_DATA: staging.bitshares.org
             - name: Deploy
               uses: s0/git-publish-subdir-action@master
               env:
                   REPO: git@github.com:bitshares/bitshares-ui-staging.git
                   BRANCH: master
-                  FOLDER: build/dist
+                  FOLDER: build/hash-history
                   SSH_PRIVATE_KEY: ${{ secrets.AUTOMATION_STAGING_DEPLOYMENT_KEY }}
