update node ver to 16+

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     ],
     "license": "MIT",
     "engines": {
-        "node": ">=10.x",
-        "npm": ">=6.x",
+        "node": ">=16.x",
+        "npm": ">=8.x",
         "yarn": ">=0.21.3"
     },
     "repository": {
@@ -24,7 +24,7 @@
     "scripts": {
         "postinstall": "npm run install-charting-library",
         "compile-tv-css": "node-sass ./charting_library/scss/ --output ./charting_library/ --output-style compressed",
-        "install-charting-library": "node ./charting_library/install-charting-library.js && npm run compile-tv-css",
+        "install-charting-library": "node ./charting_library/install-charting-library.cjs && npm run compile-tv-css",
         "test:market": "cross-env NODE_ENV=test mocha --require babel-core/register --watch --watch-extensions js ./app/test/marketTests",
         "bench:market": "cross-env NODE_ENV=test babel ./lib/common/MarketClasses.js -o ./app/test/MarketClasses.js && cross-env NODE_ENV=test node --harmony ./test/marketBenchmark",
         "profile-dev": "webpack --env.dev --env.profile --profile --json > stats-dev.json",
