--- a/package.json
+++ b/package.json
@@ -27,28 +27,28 @@
         "install-charting-library": "node ./charting_library/install-charting-library.cjs && npm run compile-tv-css",
         "test:market": "cross-env NODE_ENV=test mocha --require babel-core/register --watch --watch-extensions js ./app/test/marketTests",
         "bench:market": "cross-env NODE_ENV=test babel ./lib/common/MarketClasses.js -o ./app/test/MarketClasses.js && cross-env NODE_ENV=test node --harmony ./test/marketBenchmark",
-        "profile-dev": "webpack --env.dev --env.profile --profile --json > stats-dev.json",
-        "profile-build": "cross-env NODE_ENV=production webpack --env.prod --env.profile --env.hash --env.baseUrl='' --profile --json > stats-prod.json",
-        "profile-nougly": "cross-env NODE_ENV=production webpack --env.prod --env.profile --env.hash --env.noUgly --profile --json > stats-prod-nougly.json",
+        "profile-dev": "webpack --env dev --env profile --profile --json > stats-dev.json",
+        "profile-build": "cross-env NODE_ENV=production webpack --env prod --env profile --env hash --env baseUrl='' --profile --json > stats-prod.json",
+        "profile-nougly": "cross-env NODE_ENV=production webpack --env prod --env profile --env hash --env noUgly --profile --json > stats-prod-nougly.json",
         "start": "cross-env NODE_ENV=development node server.js",
         "start-perf": "cross-env NODE_ENV=development node server.js perf-dev",
-        "prestart-electron": "cross-env NODE_ENV=production webpack --env.hash --env.noUgly --env.electron --env.prod && npm run prepare-electron",
+        "prestart-electron": "cross-env NODE_ENV=production webpack --env hash --env noUgly --env electron --env prod && npm run prepare-electron",
         "start-electron": "electron build/electron/index.js",
         "fix-locale-files": "node ./app/assets/locales-fixup.js",
         "create-notification-string": "node ./app/assets/create-notifcation-string.js",
         "remove-english-locale-duplicates": "node ./app/assets/locales-remove-english-duplicates.js",
         "postfix-locale-files": "./node_modules/prettier/bin-prettier.js app/assets/locales/locale-*.json --write",
-        "build": "cross-env NODE_ENV=production webpack --env.prod",
-        "build-nougly": "cross-env NODE_ENV=production webpack --env.prod --env.noUgly",
-        "build-hash": "cross-env NODE_ENV=production webpack --env.prod --env.hash --env.baseUrl=''",
-        "build-hash-nougly": "cross-env NODE_ENV=production webpack --env.prod --env.hash --env.noUgly --env.baseUrl=''",
-        "build-github": "cross-env NODE_ENV=production webpack --env.prod --env.hash --env.deprecated --env.baseUrl='/wallet/'",
-        "build-electron": "cross-env NODE_ENV=production webpack --env.prod --env.electron --env.hash",
-        "build-electron-nougly": "cross-env NODE_ENV=production webpack --env.prod --env.electron --env.noUgly --env.hash --progress --display-error-details --colors",
+        "build": "cross-env NODE_ENV=production webpack --env prod",
+        "build-nougly": "cross-env NODE_ENV=production webpack --env prod --env noUgly",
+        "build-hash": "cross-env NODE_ENV=production webpack --env prod --env hash --env baseUrl=''",
+        "build-hash-nougly": "cross-env NODE_ENV=production webpack --env prod --env hash --env noUgly --env baseUrl=''",
+        "build-github": "cross-env NODE_ENV=production webpack --env prod --env hash --env.deprecated --env baseUrl='/wallet/'",
+        "build-electron": "cross-env NODE_ENV=production webpack --env prod --env electron --env hash",
+        "build-electron-nougly": "cross-env NODE_ENV=production webpack --env prod --env electron --env noUgly --env hash --progress --display-error-details --colors",
         "prepare-electron": "copyfiles -f resources/*.js build/electron/",
         "postbuild-electron": "npm run prepare-electron",
         "postbuild-electron-nougly": "npm run prepare-electron",
-        "build-win32": "cross-env NODE_ENV=production && webpack --env.prod --progress --colors &&  echo 'copying to electron/build..' &&  xcopy dist ..\\electron\\build /s /e /y && echo 'done.'",
+        "build-win32": "cross-env NODE_ENV=production && webpack --env prod --progress --colors &&  echo 'copying to electron/build..' &&  xcopy dist ..\\electron\\build /s /e /y && echo 'done.'",
         "precommit": "pretty-quick --staged",
         "prepackage": "npm run build-electron",
         "prepackage-no-ugly": "npm run build-electron-nougly",
@@ -58,7 +58,7 @@
         "package-deb": "npm run prepackage && build  -p never --linux deb",
         "package-snap": "npm run prepackage && build  -p never --linux snap",
         "package-win": "npm run prepackage && build  -p never --windows",
-        "package-mac": "npm run prepackage && build  -p never --mac dmg",
+        "package-mac": "npm run prepackage && electron-builder  -p never --mac dmg",
         "postpackage": "node write_digest.js",
         "scam": "node scamParser.js"
     },
@@ -148,9 +148,10 @@
         "bitsharesjs": "^5.0.0",
         "browser-locale": "^1.0.3",
         "classnames": "^2.2.1",
+        "constants-browserify": "^1.0.0",
         "cookies-js": "^1.2.1",
-        "copy-webpack-plugin": "^4.5.1",
         "counterpart": "^0.18.5",
+        "crypto-browserify": "^3.12.0",
         "event-emitter": "^0.3.4",
         "file-saver": "^1.3.8",
         "foundation-apps": "git+https://github.com/zurb/foundation-apps.git",
@@ -176,6 +177,7 @@
         "numeral": "2.0.4",
         "object-assign": "^4.0.1",
         "oidc-client": "^1.8.2",
+        "path-browserify": "^1.0.1",
         "perfect-scrollbar": "git+https://github.com/bitshares/perfect-scrollbar.git",
         "prop-types": "^15.6.1",
         "qrcode": "^1.4.4",
@@ -204,6 +206,7 @@
         "react-transition-group": "^1.2.0",
         "react-translate-component": "^0.15.1",
         "steem-js-api": "^0.7.1",
+        "stream-browserify": "^3.0.0",
         "string-similarity": "^2.0.0",
         "tcomb": "2.5.2",
         "whatwg-fetch": "^2.0.1",
@@ -211,73 +214,74 @@
         "zxcvbn-async": "0.0.5"
     },
     "devDependencies": {
+        "@babel/core": "^7.16.0",
+        "@babel/eslint-parser": "^7.16.3",
+        "@babel/plugin-proposal-function-bind": "^7.16.0",
+        "@babel/preset-env": "^7.16.4",
+        "@babel/preset-react": "^7.16.0",
+        "@babel/preset-stage-0": "^7.8.3",
+        "@hot-loader/react-dom": "16",
         "archiver": "^3.0.0",
         "autoprefixer": "^9.5.1",
-        "babel-core": "^6.26.3",
-        "babel-eslint": "^8.2.5",
         "babel-jest": "^24.1.0",
-        "babel-loader": "^7.1.5",
+        "babel-loader": "^8.2.3",
         "babel-plugin-lodash": "^3.3.2",
         "babel-plugin-webpack-alias": "^2.1.2",
         "babel-polyfill": "^6.26.0",
-        "babel-preset-env": "^1.6.1",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-react": "^6.24.1",
-        "babel-preset-stage-0": "^6.16.0",
         "benchmark": "^2.1.3",
-        "clean-webpack-plugin": "^0.1.3",
+        "clean-webpack-plugin": "^4.0.0",
         "coffee-loader": "^0.7.2",
         "coffee-script": "^1.12.2",
-        "copy-webpack-plugin": "^4.5.1",
+        "copy-webpack-plugin": "^10.0.0",
         "copyfiles": "^1.2.0",
         "cross-env": "^5.0.5",
-        "css-loader": "^2.1.1",
-        "electron": "2.0.13",
-        "electron-builder": "20.40.2",
+        "css-loader": "^6.5.1",
+        "electron": "16.0.4",
+        "electron-builder": "22.14.5",
         "es6-promise": "^3.0.2",
-        "eslint": "^4.19.0",
-        "eslint-plugin-json": "^1.2.0",
-        "eslint-plugin-react": "^5.2.2",
+        "eslint": "^8.4.1",
+        "eslint-plugin-json": "^3.1.0",
+        "eslint-plugin-react": "^7.27.1",
         "express": "^4.14.0",
         "express-history-api-fallback": "^2.1.0",
         "extract-zip": "^1.6.7",
-        "file-loader": "^1.1.11",
+        "file-loader": "^6.2.0",
         "fs-jetpack": "^1.3.0",
         "git-rev-sync": "^1.12.0",
         "handlebars-loader": "^1.7.0",
-        "html-loader": "^0.5.5",
-        "html-webpack-plugin": "^3.2.0",
+        "html-loader": "^3.0.1",
+        "html-webpack-plugin": "^5.5.0",
         "html2canvas": "^1.0.0-alpha.12",
         "https": "^1.0.0",
         "husky": "^0.14.3",
         "jest-cli": "^24.9.0",
         "less-plugin-precompile-import": "git+https://github.com/gibbsfromncis/less-plugin-precompile-import.git#166550452515c03c0d497cae97bf58ba15ca1f84",
-        "markdown-loader": "^5.1.0",
+        "markdown-loader": "^6.0.0",
         "md5-file": "^4.0.0",
-        "mini-css-extract-plugin": "^0.4.0",
+        "mini-css-extract-plugin": "^2.4.5",
         "mocha": "^5.1.1",
         "node-libs-browser": "^1.0.0",
-        "node-sass": "^4.14.1",
-        "null-loader": "^0.1.1",
-        "postcss-loader": "^3.0.0",
+        "node-sass": "^6.0.1",
+        "null-loader": "^4.0.1",
+        "postcss": "^8.4.4",
+        "postcss-loader": "^6.2.1",
         "prettier": "^1.10.2",
         "pretty-quick": "^1.4.1",
-        "react-hot-loader": "^4.12.21",
+        "react-hot-loader": "^4.13.0",
         "react-perf-devtool": "^3.1.8",
         "react-sticky-table": "1.2.0",
-        "sass-loader": "^7.0.1",
-        "script-loader": "^0.6.1",
-        "style-loader": "^0.20.3",
-        "svg-inline-loader": "^0.8.0",
-        "svg-loader": "0.0.2",
-        "svgo": "^1.2.0",
-        "svgo-loader": "^2.1.0",
-        "uglifyjs-webpack-plugin": "^2.2.0",
-        "url-loader": "^1.0.1",
-        "webpack": "^4.43.0",
-        "webpack-cli": "^3.3.11",
-        "webpack-dev-middleware": "^3.1.3",
-        "webpack-hot-middleware": "^2.22.1",
-        "worker-loader": "^1.1.1"
+        "sass-loader": "^12.4.0",
+        "script-loader": "^0.7.2",
+        "style-loader": "^3.3.1",
+        "svg-inline-loader": "^0.8.2",
+        "svg-loader": "^0.0.2",
+        "svgo": "^2.8.0",
+        "svgo-loader": "^3.0.0",
+        "url-loader": "^4.1.1",
+        "webpack": "^5.65.0",
+        "webpack-cli": "^4.9.1",
+        "webpack-dev-middleware": "^5.2.2",
+        "webpack-hot-middleware": "^2.25.1",
+        "worker-loader": "^3.0.8"
     }
 }
