--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
         "profile-dev": "webpack --env dev --env profile --profile --json > stats-dev.json",
         "profile-build": "cross-env NODE_ENV=production webpack --env prod --env profile --env hash --env baseUrl='' --profile --json > stats-prod.json",
         "profile-nougly": "cross-env NODE_ENV=production webpack --env prod --env profile --env hash --env noUgly --profile --json > stats-prod-nougly.json",
-        "start": "cross-env NODE_ENV=development node server.js",
-        "start-perf": "cross-env NODE_ENV=development node server.js perf-dev",
+        "start": "cross-env NODE_ENV=development webpack serve",
+        "start-perf": "cross-env NODE_ENV=development webpack serve perf-dev",
         "prestart-electron": "cross-env NODE_ENV=production webpack --env hash --env noUgly --env electron --env prod && npm run prepare-electron",
         "start-electron": "electron build/electron/index.js",
         "fix-locale-files": "node ./app/assets/locales-fixup.js",
@@ -158,6 +158,7 @@
         "fractional": "^1.0.0",
         "handlebars": "^4.7.7",
         "hirestime": "^3.2.1",
+        "html2canvas": "^1.3.3",
         "ifvisible": "^1.1.0",
         "immutable": "3.8.2",
         "indexeddbshim": "^2.2.1",
@@ -229,9 +230,8 @@
         "babel-plugin-webpack-alias": "^2.1.2",
         "babel-polyfill": "^6.26.0",
         "benchmark": "^2.1.3",
-        "clean-webpack-plugin": "^4.0.0",
-        "coffee-loader": "^0.7.2",
-        "coffee-script": "^1.12.2",
+        "coffee-loader": "^3.0.0",
+        "coffeescript": "^2.6.1",
         "copy-webpack-plugin": "^10.0.0",
         "copyfiles": "^1.2.0",
         "cross-env": "^5.0.5",
@@ -242,7 +242,7 @@
         "eslint": "^8.4.1",
         "eslint-plugin-json": "^3.1.0",
         "eslint-plugin-react": "^7.27.1",
-        "express": "^4.14.0",
+        "express": "^4.17.1",
         "express-history-api-fallback": "^2.1.0",
         "extract-zip": "^1.6.7",
         "file-loader": "^6.2.0",
@@ -251,11 +251,9 @@
         "handlebars-loader": "^1.7.0",
         "html-loader": "^3.0.1",
         "html-webpack-plugin": "^5.5.0",
-        "html2canvas": "^1.0.0-alpha.12",
         "https": "^1.0.0",
         "husky": "^0.14.3",
         "jest-cli": "^24.9.0",
-        "less-plugin-precompile-import": "git+https://github.com/gibbsfromncis/less-plugin-precompile-import.git#166550452515c03c0d497cae97bf58ba15ca1f84",
         "markdown-loader": "^6.0.0",
         "md5-file": "^4.0.0",
         "mini-css-extract-plugin": "^2.4.5",
@@ -280,7 +278,7 @@
         "url-loader": "^4.1.1",
         "webpack": "^5.65.0",
         "webpack-cli": "^4.9.1",
-        "webpack-dev-middleware": "^5.2.2",
+        "webpack-dev-server": "^4.6.0",
         "webpack-hot-middleware": "^2.25.1",
         "worker-loader": "^3.0.8"
     }
