--- a/.github/workflows/build-release-binaries.yml
+++ b/.github/workflows/build-release-binaries.yml
@@ -54,6 +54,7 @@ jobs:
                   tag_name: ${{ github.ref_name }}
                   release_name: Release ${{ github.ref_name }}
                   body_path: release_template.md
+                  draft: true
             - name: Upload dmg
               uses: actions/upload-release-asset@v1.0.2
               env:
