--- a/.github/workflows/build-release-binaries.yml
+++ b/.github/workflows/build-release-binaries.yml
@@ -41,10 +41,12 @@ jobs:
                   echo "::set-output name=exehash::${{ hashFiles('build/binaries/**.exe') }}"
             - name: Create Body
               run: |
-                  sed -i'' "s/{TagName}/${{ github.ref_name }}/g" ./.github/release-drafter.yml
-                  sed -i'' "s/{DmgHash}/${{ steps.calc_hash.outputs.dmghash }}/g" ./.github/release-drafter.yml
-                  sed -i'' "s/{DebHash}/${{ steps.calc_hash.outputs.debhash }}/g" ./.github/release-drafter.yml
-                  sed -i'' "s/{ExeHash}/${{ steps.calc_hash.outputs.exehash }}/g" ./.github/release-drafter.yml
+                  sed -i'.back' "s#{TagName}#${{ github.ref_name }}#g" ./.github/release-drafter.yml
+                  sed -i'.back' "s#{DmgHash}#${{ steps.calc_hash.outputs.dmghash }}#g" ./.github/release-drafter.yml
+                  sed -i'.back' "s#{DebHash}#${{ steps.calc_hash.outputs.debhash }}#g" ./.github/release-drafter.yml
+                  sed -i'.back' "s#{ExeHash}#${{ steps.calc_hash.outputs.exehash }}#g" ./.github/release-drafter.yml
+                  cat ./.github/release-drafter.yml
+                  cat release-drafter.yml
             - name: Create Release
               id: create_release
               uses: release-drafter/release-drafter@v5
