Update node-sass to sass

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "main": "build/electron/index.js",
     "scripts": {
         "postinstall": "npm run install-charting-library",
-        "compile-tv-css": "node-sass ./charting_library/scss/ --output ./charting_library/ --output-style compressed",
+        "compile-tv-css": "sass ./charting_library/scss/:./charting_library/ --style compressed",
         "install-charting-library": "node ./charting_library/install-charting-library.cjs && npm run compile-tv-css",
         "test:market": "cross-env NODE_ENV=test mocha --require babel-core/register --watch --watch-extensions js ./app/test/marketTests",
         "bench:market": "cross-env NODE_ENV=test babel ./lib/common/MarketClasses.js -o ./app/test/MarketClasses.js && cross-env NODE_ENV=test node --harmony ./test/marketBenchmark",
@@ -263,7 +263,6 @@
         "mini-css-extract-plugin": "^2.4.5",
         "mocha": "^5.1.1",
         "node-libs-browser": "^1.0.0",
-        "node-sass": "^6.0.1",
         "null-loader": "^4.0.1",
         "postcss": "^8.4.4",
         "postcss-loader": "^6.2.1",
@@ -272,6 +271,7 @@
         "react-hot-loader": "^4.13.0",
         "react-perf-devtool": "^3.1.8",
         "react-sticky-table": "1.2.0",
+        "sass": "^1.45.1",
         "sass-loader": "^12.4.0",
         "script-loader": "^0.7.2",
         "style-loader": "^3.3.1",
