--- a/.gitignore
+++ b/.gitignore
@@ -19,10 +19,9 @@ app/bundle
 app/stats-dev.json
 app/stats-prod.json
 app/test/MarketClasses.js
-yarn.lock
 
 charting_library/*
 !charting_library/scss
 !charting_library/charting_library.17.025.02b61a1c.zip.md5
 !charting_library/package-charting-library.js
-!charting_library/install-charting-library.js
+!charting_library/install-charting-library.cjs
